--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>A Simple Library</h1>
         <dialog id="bookForm">
             <form>
                 <p>
